# agentao-kanban

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  uv.toml.example
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
docs/: acp.sample.json  agent-profile-acp-adr.md  agent-profile-acp-checklist.md  agent-profile-acp-design.md  agent-router-adr.md  agent-router-checklist.md  agent-router-design.md  agent_profiles.sample.yaml  dependency-auto-advance-and-all-parallel-plan.md  install.md  kanban-cli-guide.md  kanban-web-readonly-plan.md  kanban-web-ui-result-improvement-plan.md  kanban-web-write-actions-safety-plan.md  mcp-server-design.md  multi-agent-implementation-plan.md  v0.1.1-improvement-plan.md  v0.1.2-concurrency-plan.md  worktree-isolation-design.md
docs/agent-definitions/: kanban-planner.md  kanban-reviewer.md  kanban-verifier.md  kanban-worker.md
docs/implementation/: agent-profile-acp-implementation.md  agent-router-implementation.md  kanban-web-write-actions-implementation.md
kanban/: __init__.py  agent_profiles.py  agents.py  cli.py  daemon.py  demo.py  doctor.py  gitutil.py  init.py  mcp.py  models.py  operations.py  orchestrator.py  result.py  store.py  store_markdown.py  web.py  web_artifacts.py  web_serializers.py  worktree.py
kanban/cli/: __init__.py  helpers.py  parser.py  rendering.py
kanban/daemon/: __init__.py  combined.py  config.py  lock.py  role_base.py  scheduler.py  worker.py
kanban/defaults/: agent_profiles.yaml  kanban-planner.md  kanban-reviewer.md  kanban-router.md  kanban-verifier.md  kanban-worker.md
kanban/executors/: __init__.py  base.py  (+7 more)
tests/: test_acp_backend.py  test_acp_failure_mapping.py  test_adversarial_fixes.py  test_agent_profiles.py  test_agentao_multi_executor.py  test_cli.py  test_cli_acceptance_edit.py  test_cli_claim_guard.py  test_cli_daemon_ops.py  test_cli_doctor_env.py  test_cli_init_demo.py  test_cli_mcp_install.py  test_cli_profiles.py  test_cli_result.py  test_cli_runtime.py  test_cli_worktree_flag.py  test_cli_worktree_prune_lock.py  test_combined_parallel.py  test_commit_and_recovery.py  test_daemon.py  test_dependency_auto_advance.py  test_event_trust_boundary.py  test_execution_events.py  test_executor_retry_path.py  test_manual_terminal_detach.py  test_mcp_server.py  test_multi_backend_executor.py  test_multi_backend_integration.py  test_operations.py  test_orchestrator.py  test_planner_supersession.py  test_profile_event_enrichment.py  test_profile_resolver.py  test_retry_matrix.py  test_rework_loop.py  test_router_cache_and_cwd.py  test_router_policy.py  test_runtime_claims.py  test_scheduler_completeness.py  test_scheduler_worker.py  (+10 more)
(+52 files in other folders)
