[project]
name = "kanban"
version = "0.1.0"
description = "Minimal multi-agent kanban board"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentao",
]

[project.scripts]
kanban = "kanban.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kanban"]

[tool.uv.sources]
agentao = { path = "../agentao", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
